Bug 144918 - FILEOPEN PPTX Interaction placed on shape is not imported
Summary: FILEOPEN PPTX Interaction placed on shape is not imported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.3.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Hyperlink
  Show dependency treegraph
 
Reported: 2021-10-04 13:49 UTC by NISZ LibreOffice Team
Modified: 2022-05-04 09:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PowerPoint with internal hyperlinks on shapes (34.17 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-10-04 13:51 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-10-04 13:49:18 UTC
Description:
This is a followup to bug 144616
When a PPTX slideshow contains internal hyperlink placed on shapes used in interactions pointing to the first/third slides, these are not imported by Impress.

Steps to Reproduce:
1.Open attached file.
2.Start the slideshow and try clicking on the left shape on second slide
3.

Actual Results:
Hyperlink was not imported so nothing happens.
This should be editable in the right click menu – Interactions dialog, which also indicates there is nothing associated to the shapes.

Expected Results:
Clicking the shape on the second slide should take to the first slide.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 770dcb1f717d576facf31efed14bee403e1a7155
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-10-04 13:51:09 UTC
Created attachment 175506 [details]
Example file from PowerPoint with internal hyperlinks on shapes
Comment 2 Commit Notification 2021-11-04 10:51:47 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cec1f712c87e557e1b7313e0dbef4a635f69d953

tdf#144918 PPTX import: fix internal hyperlink on shapes

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2022-05-04 09:58:59 UTC
Verified in:

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 83d0f2eebae41d431d9a5bfd1a918523977752d0
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL