tdf#144918 PPTX import: fix internal hyperlink on shapes

Internal hyperlinks were not imported correctly and
lost during the slideshow.

Change-Id: I733ddcdcdf92b32c4e6272d3cf48da872a63cd47